Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -958,37 +958,6 @@
     ]
   },
   {
-    "title": "Chú rể Nhật hát Quốc ca Việt Nam trong đám cưới",
-    "content": "Trong đám cưới của mình tại Tokyo, chú rể Takahashi YuYa đã gây bất ngờ cho khách mời khi hát Quốc ca Việt Nam \"Tiến quân ca\" và đọc thư cảm ơn bằng tiếng Việt. Màn trình diễn của anh đã thu hút sự chú ý và tạo niềm vui cho cô dâu Phạm Minh Trang cùng toàn thể quan khách. YuYa chia sẻ rằng anh muốn thể hiện tình yêu của mình với Việt Nam và đã luyện tập để có thể hát thật tốt trong ngày trọng đại này.",
-    "link": "https://vnexpress.net/chu-re-nhat-hat-quoc-ca-viet-nam-trong-dam-cuoi-4860058.html",
-    "cat": "gia-dinh",
-    "positivity": 10,
-    "importance": 8,
-    "question": "Chú rể Nhật Bản Takahashi YuYa đã làm gì đặc biệt trong đám cưới của mình?",
-    "answers": [
-      {
-        "text": "Hát Quốc ca Việt Nam",
-        "correct": true
-      },
-      {
-        "text": "Đọc thơ bằng tiếng Nhật",
-        "correct": false
-      },
-      {
-        "text": "Nhảy múa cùng cô dâu",
-        "correct": false
-      },
-      {
-        "text": "Chơi nhạc cụ truyền thống",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức tiệc lớn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Kamax Cub-X - xe nhái Honda Cub sắp ra mắt Đông Nam Á",
     "content": "Kamax Cub-X, mẫu xe hai bánh mới từ Trung Quốc, dự kiến ra mắt tại Malaysia vào quý III năm 2025 với giá khởi điểm từ 2.000 USD. Xe có thiết kế cổ điển lấy cảm hứng từ Honda Super Cub và sẽ cạnh tranh với Yamaha PG-1. Cub-X trang bị động cơ xăng 125 phân khối với công suất 8,4 mã lực và mô-men xoắn 9,3 Nm, cùng nhiều tùy chọn về phanh và yên xe.",
     "link": "https://vnexpress.net/kamax-cub-x-xe-nhai-honda-cub-sap-ra-mat-dong-nam-a-4859897.html",
@@ -1042,6 +1011,64 @@
       },
       {
         "text": "Họ không tin vào bác sĩ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chú rể Nhật hát Quốc ca Việt Nam trong đám cưới",
+    "content": "Trong đám cưới của mình tại Tokyo, chú rể Takahashi YuYa đã gây bất ngờ cho khách mời khi hát Quốc ca Việt Nam \"Tiến quân ca\" và đọc thư cảm ơn bằng tiếng Việt. Màn trình diễn của anh đã thu hút sự chú ý và tạo niềm vui cho cô dâu Phạm Minh Trang cùng toàn thể quan khách. YuYa chia sẻ rằng anh muốn thể hiện tình yêu của mình với Việt Nam và đã luyện tập để có thể hát thật tốt trong ngày trọng đại này.",
+    "link": "https://vnexpress.net/chu-re-nhat-hat-quoc-ca-viet-nam-trong-dam-cuoi-4860058.html",
+    "cat": "gia-dinh",
+    "positivity": 10,
+    "importance": 8,
+    "question": "Chú rể Nhật Bản Takahashi YuYa đã làm gì đặc biệt trong đám cưới của mình?",
+    "answers": [
+      {
+        "text": "Hát Quốc ca Việt Nam",
+        "correct": true
+      },
+      {
+        "text": "Đọc thơ bằng tiếng Nhật",
+        "correct": false
+      },
+      {
+        "text": "Nhảy múa cùng cô dâu",
+        "correct": false
+      },
+      {
+        "text": "Chơi nhạc cụ truyền thống",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức tiệc lớn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chiến sự Ukraine 12/3: Nga dồn dập trả đũa, Kiev và Kharkov rung chuyển",
+    "content": "Trong ngày 12/3, Kiev và Kharkov ghi nhận nhiều tiếng nổ lớn trong bối cảnh Ukraine cảnh báo về nguy cơ không kích. Các vụ tấn công này được xem là phản ứng của Nga trước vụ tập kích UAV của Ukraine vào Moscow. Tình hình chiến sự ở khu vực Kursk cũng trở nên căng thẳng khi quân đội Nga củng cố vị trí và chuẩn bị cho một cuộc tấn công lớn nhằm đè bẹp lực lượng Ukraine.",
+    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-123-nga-don-dap-tra-dua-kiev-va-kharkov-rung-chuyen-20250312055845811.htm",
+    "cat": "the-gioi",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tình hình chiến sự Ukraine ngày 12/3 diễn ra như thế nào?",
+    "answers": [
+      {
+        "text": "Kiev và Kharkov có nhiều tiếng nổ lớn do không kích.",
+        "correct": true
+      },
+      {
+        "text": "Kiev hoàn toàn yên bình và không có sự việc gì xảy ra.",
+        "correct": false
+      },
+      {
+        "text": "Nga đã rút quân khỏi các khu vực chiến sự ở Ukraine.",
+        "correct": false
+      },
+      {
+        "text": "Thế giới đang theo dõi một cuộc đàm phán hòa bình giữa Ukraine và Nga.",
         "correct": false
       }
     ]
@@ -3219,33 +3246,6 @@
     ]
   },
   {
-    "title": "Lịch thi học kì 2 của học sinh phổ thông trên cả nước như thế nào?",
-    "content": "Lịch thi học kỳ 2 năm học 2024-2025 cho học sinh phổ thông trên cả nước sẽ do Chủ tịch UBND tỉnh, thành phố quyết định, phù hợp với tình hình địa phương. Theo quy định của Bộ GD&ĐT, học kỳ 2 sẽ bắt đầu sau ngày 17/1/2025 và kết thúc trước 31/5/2025, với 17 tuần học. Các kỳ thi tốt nghiệp trung học phổ thông dự kiến diễn ra vào 26 và 27/6/2025, và lịch thi cụ thể sẽ được điều chỉnh theo từng địa phương để đảm bảo thực hiện đầy đủ chương trình giáo dục.",
-    "link": "https://dantri.com.vn/giao-duc/lich-thi-hoc-ki-2-cua-hoc-sinh-pho-thong-tren-ca-nuoc-nhu-the-nao-20250311115603384.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Lịch thi học kỳ 2 năm 2024-2025 diễn ra như thế nào?",
-    "answers": [
-      {
-        "text": "Chủ tịch UBND tỉnh quyết định lịch thi phù hợp với địa phương.",
-        "correct": true
-      },
-      {
-        "text": "Tất cả học sinh sẽ thi vào cùng một ngày.",
-        "correct": false
-      },
-      {
-        "text": "Lịch thi do Bộ GD&ĐT hoàn toàn quyết định.",
-        "correct": false
-      },
-      {
-        "text": "Học sinh không phải thi nếu không muốn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
     "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
     "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
@@ -3268,6 +3268,33 @@
       },
       {
         "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lịch thi học kì 2 của học sinh phổ thông trên cả nước như thế nào?",
+    "content": "Lịch thi học kỳ 2 năm học 2024-2025 cho học sinh phổ thông trên cả nước sẽ do Chủ tịch UBND tỉnh, thành phố quyết định, phù hợp với tình hình địa phương. Theo quy định của Bộ GD&ĐT, học kỳ 2 sẽ bắt đầu sau ngày 17/1/2025 và kết thúc trước 31/5/2025, với 17 tuần học. Các kỳ thi tốt nghiệp trung học phổ thông dự kiến diễn ra vào 26 và 27/6/2025, và lịch thi cụ thể sẽ được điều chỉnh theo từng địa phương để đảm bảo thực hiện đầy đủ chương trình giáo dục.",
+    "link": "https://dantri.com.vn/giao-duc/lich-thi-hoc-ki-2-cua-hoc-sinh-pho-thong-tren-ca-nuoc-nhu-the-nao-20250311115603384.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Lịch thi học kỳ 2 năm 2024-2025 diễn ra như thế nào?",
+    "answers": [
+      {
+        "text": "Chủ tịch UBND tỉnh quyết định lịch thi phù hợp với địa phương.",
+        "correct": true
+      },
+      {
+        "text": "Tất cả học sinh sẽ thi vào cùng một ngày.",
+        "correct": false
+      },
+      {
+        "text": "Lịch thi do Bộ GD&ĐT hoàn toàn quyết định.",
+        "correct": false
+      },
+      {
+        "text": "Học sinh không phải thi nếu không muốn.",
         "correct": false
       }
     ]
@@ -4366,37 +4393,6 @@
       },
       {
         "text": "200 tấn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "UAV Ukraine tập kích Moscow, lá chắn phòng không Nga bắn trả",
-    "content": "Vào rạng sáng ngày 11/3/2025, UAV của Ukraine đã thực hiện một cuộc tập kích nhằm vào Moscow, nhưng đã bị lực lượng phòng không Nga chặn đứng. Thị trưởng Moscow, Sergei Sobyanin, cho biết ít nhất 11 máy bay không người lái đã bị bắn hạ ở các khu vực Ramenskoye và Domodedovo. Không có thiệt hại hay thương tích nào được báo cáo và hoạt động bay tại một số sân bay đã bị tạm hoãn để đảm bảo an toàn. Ukraine cho rằng các cuộc tấn công này nhằm phá hủy cơ sở hạ tầng của Nga trong bối cảnh xung đột kéo dài.",
-    "link": "https://dantri.com.vn/the-gioi/uav-ukraine-tap-kich-moscow-la-chan-phong-khong-nga-ban-tra-20250311100809723.htm",
-    "cat": "the-gioi",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Cuộc tấn công UAV của Ukraine vào Moscow đã diễn ra khi nào?",
-    "answers": [
-      {
-        "text": "Vào rạng sáng 12/3/2025",
-        "correct": false
-      },
-      {
-        "text": "Vào rạng sáng 11/3/2025",
-        "correct": true
-      },
-      {
-        "text": "Vào rạng sáng 10/3/2025",
-        "correct": false
-      },
-      {
-        "text": "Vào chiều 11/3/2025",
-        "correct": false
-      },
-      {
-        "text": "Vào tối 10/3/2025",
         "correct": false
       }
     ]
