Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Ứng xử văn minh để các bên đều có lợi",
+    "content": "Bài viết bàn về vụ tranh cãi liên quan đến sản phẩm kẹo rau Kera và tính hiệu quả của luật pháp trong việc bảo vệ người tiêu dùng. Tác giả đề xuất cơ chế kiện tập thể để tạo điều kiện cho các cá nhân, tổ chức bị xâm phạm quyền lợi có thể đứng đơn kiện cùng nhau nhằm bảo vệ lợi ích chung. Điều này không chỉ giúp người tiêu dùng mà còn hỗ trợ các nhà sản xuất có sản phẩm chất lượng, tạo ra một môi trường kinh doanh công bằng hơn.",
+    "link": "https://tuoitre.vn/ung-xu-van-minh-de-cac-ben-deu-co-loi-20250312085542288.htm",
+    "cat": "phap-luat",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao cần có cơ chế kiện tập thể trong bảo vệ quyền lợi người tiêu dùng?",
+    "answers": [
+      {
+        "text": "Để bảo vệ quyền lợi chung của nhiều người tiêu dùng.",
+        "correct": true
+      },
+      {
+        "text": "Để giảm thiểu chi phí cho từng cá nhân.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng cường chất lượng sản phẩm trên thị trường.",
+        "correct": false
+      },
+      {
+        "text": "Để khuyến khích các nhà sản xuất tạo ra sản phẩm tốt hơn.",
+        "correct": false
+      },
+      {
+        "text": "Để tạo ra một môi trường cạnh tranh hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ấn Độ mở cửa xuất khẩu gạo 100% tấm: Gạo Việt không bị ảnh hưởng nhiều?",
     "content": "Ấn Độ đã mở cửa cho xuất khẩu gạo 100% tấm, dự báo sẽ không ảnh hưởng nhiều đến giá gạo xuất khẩu của Việt Nam. Theo các doanh nghiệp chế biến gạo, mặc dù Việt Nam có xuất tấm nhưng số lượng thấp, và gạo tấm Ấn Độ chủ yếu được sử dụng trong chế biến thực phẩm chứ không cạnh tranh trực tiếp với gạo ăn. Nông dân Việt Nam hiện cũng không hưởng lợi nhiều từ việc thu mua tạm trữ lúa do giá lúa giảm và chi phí sản xuất tăng cao.",
     "link": "https://tuoitre.vn/an-do-mo-cua-xuat-khau-gao-100-tam-gao-viet-khong-bi-anh-huong-nhieu-20250312081925133.htm",
@@ -646,64 +677,6 @@
     ]
   },
   {
-    "title": "Một doanh nghiệp bán lẻ muốn mở 3 cửa hàng mỗi ngày",
-    "content": "WinCommerce, thuộc Tập đoàn Masan, có kế hoạch mở mới 1.000 cửa hàng trong năm 2025, tương đương với việc mở trung bình 3 cửa hàng mỗi ngày. Doanh nghiệp này đã ghi nhận sự tăng trưởng doanh thu ổn định trong năm 2024, với các mô hình cửa hàng mới như WiN và WinMart+ Rural. Chính sách giảm thuế VAT trong năm 2025 được kỳ vọng sẽ hỗ trợ hơn nữa cho hoạt động kinh doanh bán lẻ của WinCommerce, tạo điều kiện thuận lợi cho việc mở rộng quy mô.",
-    "link": "https://tuoitre.vn/mot-doanh-nghiep-ban-le-muon-mo-3-cua-hang-moi-ngay-20250311172408279.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "WinCommerce dự định mở bao nhiêu cửa hàng trong năm 2025?",
-    "answers": [
-      {
-        "text": "1.000 cửa hàng",
-        "correct": true
-      },
-      {
-        "text": "500 cửa hàng",
-        "correct": false
-      },
-      {
-        "text": "2.000 cửa hàng",
-        "correct": false
-      },
-      {
-        "text": "800 cửa hàng",
-        "correct": false
-      },
-      {
-        "text": "1.500 cửa hàng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sun World và Vietravel hợp tác chiến lược",
-    "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
-    "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Sun World và Vietravel đã hợp tác để làm gì?",
-    "answers": [
-      {
-        "text": "Nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí.",
-        "correct": true
-      },
-      {
-        "text": "Tăng giá vé vào cửa cho du khách.",
-        "correct": false
-      },
-      {
-        "text": "Giảm số lượng khách tham quan.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tổ chức tour du lịch trong nước.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
     "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
@@ -761,6 +734,64 @@
       },
       {
         "text": "Cung cấp dịch vụ mua sắm cao cấp",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Một doanh nghiệp bán lẻ muốn mở 3 cửa hàng mỗi ngày",
+    "content": "WinCommerce, thuộc Tập đoàn Masan, có kế hoạch mở mới 1.000 cửa hàng trong năm 2025, tương đương với việc mở trung bình 3 cửa hàng mỗi ngày. Doanh nghiệp này đã ghi nhận sự tăng trưởng doanh thu ổn định trong năm 2024, với các mô hình cửa hàng mới như WiN và WinMart+ Rural. Chính sách giảm thuế VAT trong năm 2025 được kỳ vọng sẽ hỗ trợ hơn nữa cho hoạt động kinh doanh bán lẻ của WinCommerce, tạo điều kiện thuận lợi cho việc mở rộng quy mô.",
+    "link": "https://tuoitre.vn/mot-doanh-nghiep-ban-le-muon-mo-3-cua-hang-moi-ngay-20250311172408279.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "WinCommerce dự định mở bao nhiêu cửa hàng trong năm 2025?",
+    "answers": [
+      {
+        "text": "1.000 cửa hàng",
+        "correct": true
+      },
+      {
+        "text": "500 cửa hàng",
+        "correct": false
+      },
+      {
+        "text": "2.000 cửa hàng",
+        "correct": false
+      },
+      {
+        "text": "800 cửa hàng",
+        "correct": false
+      },
+      {
+        "text": "1.500 cửa hàng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sun World và Vietravel hợp tác chiến lược",
+    "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
+    "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Sun World và Vietravel đã hợp tác để làm gì?",
+    "answers": [
+      {
+        "text": "Nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí.",
+        "correct": true
+      },
+      {
+        "text": "Tăng giá vé vào cửa cho du khách.",
+        "correct": false
+      },
+      {
+        "text": "Giảm số lượng khách tham quan.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tổ chức tour du lịch trong nước.",
         "correct": false
       }
     ]
@@ -1025,32 +1056,32 @@
     ]
   },
   {
-    "title": "Kamax Cub-X - xe nhái Honda Cub sắp ra mắt Đông Nam Á",
-    "content": "Kamax Cub-X, mẫu xe hai bánh mới từ Trung Quốc, dự kiến ra mắt tại Malaysia vào quý III năm 2025 với giá khởi điểm từ 2.000 USD. Xe có thiết kế cổ điển lấy cảm hứng từ Honda Super Cub và sẽ cạnh tranh với Yamaha PG-1. Cub-X trang bị động cơ xăng 125 phân khối với công suất 8,4 mã lực và mô-men xoắn 9,3 Nm, cùng nhiều tùy chọn về phanh và yên xe.",
-    "link": "https://vnexpress.net/kamax-cub-x-xe-nhai-honda-cub-sap-ra-mat-dong-nam-a-4859897.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Kamax Cub-X sẽ ra mắt tại thị trường nào vào quý III năm 2025?",
+    "title": "Chú rể Nhật hát Quốc ca Việt Nam trong đám cưới",
+    "content": "Trong đám cưới của mình tại Tokyo, chú rể Takahashi YuYa đã gây bất ngờ cho khách mời khi hát Quốc ca Việt Nam \"Tiến quân ca\" và đọc thư cảm ơn bằng tiếng Việt. Màn trình diễn của anh đã thu hút sự chú ý và tạo niềm vui cho cô dâu Phạm Minh Trang cùng toàn thể quan khách. YuYa chia sẻ rằng anh muốn thể hiện tình yêu của mình với Việt Nam và đã luyện tập để có thể hát thật tốt trong ngày trọng đại này.",
+    "link": "https://vnexpress.net/chu-re-nhat-hat-quoc-ca-viet-nam-trong-dam-cuoi-4860058.html",
+    "cat": "gia-dinh",
+    "positivity": 10,
+    "importance": 8,
+    "question": "Chú rể Nhật Bản Takahashi YuYa đã làm gì đặc biệt trong đám cưới của mình?",
     "answers": [
       {
-        "text": "Malaysia",
+        "text": "Hát Quốc ca Việt Nam",
         "correct": true
       },
       {
-        "text": "Việt Nam",
+        "text": "Đọc thơ bằng tiếng Nhật",
         "correct": false
       },
       {
-        "text": "Thái Lan",
+        "text": "Nhảy múa cùng cô dâu",
         "correct": false
       },
       {
-        "text": "Indonesia",
+        "text": "Chơi nhạc cụ truyền thống",
         "correct": false
       },
       {
-        "text": "Philippines",
+        "text": "Tổ chức tiệc lớn",
         "correct": false
       }
     ]
@@ -1083,32 +1114,32 @@
     ]
   },
   {
-    "title": "Chú rể Nhật hát Quốc ca Việt Nam trong đám cưới",
-    "content": "Trong đám cưới của mình tại Tokyo, chú rể Takahashi YuYa đã gây bất ngờ cho khách mời khi hát Quốc ca Việt Nam \"Tiến quân ca\" và đọc thư cảm ơn bằng tiếng Việt. Màn trình diễn của anh đã thu hút sự chú ý và tạo niềm vui cho cô dâu Phạm Minh Trang cùng toàn thể quan khách. YuYa chia sẻ rằng anh muốn thể hiện tình yêu của mình với Việt Nam và đã luyện tập để có thể hát thật tốt trong ngày trọng đại này.",
-    "link": "https://vnexpress.net/chu-re-nhat-hat-quoc-ca-viet-nam-trong-dam-cuoi-4860058.html",
-    "cat": "gia-dinh",
-    "positivity": 10,
-    "importance": 8,
-    "question": "Chú rể Nhật Bản Takahashi YuYa đã làm gì đặc biệt trong đám cưới của mình?",
+    "title": "Kamax Cub-X - xe nhái Honda Cub sắp ra mắt Đông Nam Á",
+    "content": "Kamax Cub-X, mẫu xe hai bánh mới từ Trung Quốc, dự kiến ra mắt tại Malaysia vào quý III năm 2025 với giá khởi điểm từ 2.000 USD. Xe có thiết kế cổ điển lấy cảm hứng từ Honda Super Cub và sẽ cạnh tranh với Yamaha PG-1. Cub-X trang bị động cơ xăng 125 phân khối với công suất 8,4 mã lực và mô-men xoắn 9,3 Nm, cùng nhiều tùy chọn về phanh và yên xe.",
+    "link": "https://vnexpress.net/kamax-cub-x-xe-nhai-honda-cub-sap-ra-mat-dong-nam-a-4859897.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Kamax Cub-X sẽ ra mắt tại thị trường nào vào quý III năm 2025?",
     "answers": [
       {
-        "text": "Hát Quốc ca Việt Nam",
+        "text": "Malaysia",
         "correct": true
       },
       {
-        "text": "Đọc thơ bằng tiếng Nhật",
+        "text": "Việt Nam",
         "correct": false
       },
       {
-        "text": "Nhảy múa cùng cô dâu",
+        "text": "Thái Lan",
         "correct": false
       },
       {
-        "text": "Chơi nhạc cụ truyền thống",
+        "text": "Indonesia",
         "correct": false
       },
       {
-        "text": "Tổ chức tiệc lớn",
+        "text": "Philippines",
         "correct": false
       }
     ]
