Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Cục thi hành án TP.HCM đã nhận hơn 34.000 đơn của các trái chủ vụ Vạn Thịnh Phát 2",
+    "content": "Cục Thi hành án dân sự TP.HCM đã nhận hơn 34.000 đơn của các trái chủ liên quan đến vụ án Vạn Thịnh Phát giai đoạn 2. Theo thông tin, có tổng cộng 43.125 trái chủ sẽ được bồi thường, và Cục đang phối hợp với Công ty Chứng khoán Tân Việt để thu thập thông tin cần thiết từ các trái chủ. Cục cũng khuyến khích những trái chủ chưa gửi đơn nhanh chóng hoàn tất thủ tục theo hướng dẫn để đảm bảo quyền lợi của họ trong quá trình thi hành án.",
+    "link": "https://tuoitre.vn/cuc-thi-hanh-an-tp-hcm-da-nhan-hon-34-000-don-cua-cac-trai-chu-vu-van-thinh-phat-2-2025031209143797.htm",
+    "cat": "phap-luat",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Cục Thi hành án TP.HCM đã nhận bao nhiêu đơn của các trái chủ vụ Vạn Thịnh Phát 2?",
+    "answers": [
+      {
+        "text": "Hơn 34.000 đơn",
+        "correct": true
+      },
+      {
+        "text": "Hơn 50.000 đơn",
+        "correct": false
+      },
+      {
+        "text": "Hơn 20.000 đơn",
+        "correct": false
+      },
+      {
+        "text": "Hơn 10.000 đơn",
+        "correct": false
+      },
+      {
+        "text": "Hơn 40.000 đơn",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ứng xử văn minh để các bên đều có lợi",
     "content": "Bài viết bàn về vụ tranh cãi liên quan đến sản phẩm kẹo rau Kera và tính hiệu quả của luật pháp trong việc bảo vệ người tiêu dùng. Tác giả đề xuất cơ chế kiện tập thể để tạo điều kiện cho các cá nhân, tổ chức bị xâm phạm quyền lợi có thể đứng đơn kiện cùng nhau nhằm bảo vệ lợi ích chung. Điều này không chỉ giúp người tiêu dùng mà còn hỗ trợ các nhà sản xuất có sản phẩm chất lượng, tạo ra một môi trường kinh doanh công bằng hơn.",
     "link": "https://tuoitre.vn/ung-xu-van-minh-de-cac-ben-deu-co-loi-20250312085542288.htm",
@@ -2138,6 +2169,33 @@
     ]
   },
   {
+    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
+    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
+    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
+    "cat": "the-thao",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
+    "answers": [
+      {
+        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì không có đủ cầu thủ giỏi.",
+        "correct": false
+      },
+      {
+        "text": "Vì không đủ may mắn trong các trận đấu.",
+        "correct": false
+      },
+      {
+        "text": "Vì không chú trọng vào phòng ngự.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ai dễ bị ngưng thở khi ngủ?",
     "content": "Hội chứng ngưng thở khi ngủ không chỉ xảy ra ở người lớn mà còn có thể ảnh hưởng đến trẻ em. Nhiều người có suy nghĩ sai lầm rằng trẻ em không mắc phải tình trạng này. Bài viết chỉ ra rằng có nhiều yếu tố làm tăng nguy cơ mắc hội chứng ngưng thở khi ngủ ở trẻ em, do đó cần chú ý và phát hiện sớm để điều trị kịp thời.",
     "link": "https://vnexpress.net/ai-de-bi-ngung-tho-khi-ngu-4859945.html",
@@ -2164,33 +2222,6 @@
       },
       {
         "text": "Người có bệnh tim mạch",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
-    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
-    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
-    "answers": [
-      {
-        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
-        "correct": true
-      },
-      {
-        "text": "Vì không có đủ cầu thủ giỏi.",
-        "correct": false
-      },
-      {
-        "text": "Vì không đủ may mắn trong các trận đấu.",
-        "correct": false
-      },
-      {
-        "text": "Vì không chú trọng vào phòng ngự.",
         "correct": false
       }
     ]
@@ -3116,33 +3147,6 @@
     ]
   },
   {
-    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
-    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
-    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
-    "answers": [
-      {
-        "text": "Có, nhưng không phải tất cả trường hợp.",
-        "correct": true
-      },
-      {
-        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
-        "correct": false
-      },
-      {
-        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
     "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
     "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
@@ -3165,6 +3169,33 @@
       },
       {
         "text": "Không cần tiêm vaccine nữa",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
+    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
+    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
+    "answers": [
+      {
+        "text": "Có, nhưng không phải tất cả trường hợp.",
+        "correct": true
+      },
+      {
+        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
+        "correct": false
+      },
+      {
+        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
         "correct": false
       }
     ]
@@ -4580,37 +4611,6 @@
       },
       {
         "text": "Porsche",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cựu thứ trưởng Bộ TN-MT tạo điều kiện cho doanh nghiệp khai thác đất hiếm bán sang Trung Quốc",
-    "content": "Ông Nguyễn Linh Ngọc, cựu thứ trưởng Bộ Tài nguyên và Môi trường, đã bị Viện Kiểm sát nhân dân tối cao truy tố vì đã tạo điều kiện cho Công ty Thái Dương khai thác trái phép đất hiếm và bán sang Trung Quốc. Mặc dù biết công ty này chưa đủ điều kiện để cấp phép, ông Ngọc vẫn ký giấy phép khai thác khoáng sản cho họ. Vụ án còn liên quan đến nhiều cán bộ khác và đã gây thiệt hại tài sản Nhà nước lên tới 763 tỷ đồng.",
-    "link": "https://tuoitre.vn/cuu-thu-truong-bo-tn-mt-tao-dieu-kien-cho-doanh-nghiep-khai-thac-dat-hiem-ban-sang-trung-quoc-20250311092705677.htm",
-    "cat": "phap-luat",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Ông Nguyễn Linh Ngọc bị truy tố vì lý do gì?",
-    "answers": [
-      {
-        "text": "Tạo điều kiện cho Công ty Thái Dương khai thác đất hiếm trái phép",
-        "correct": true
-      },
-      {
-        "text": "Tham nhũng trong lĩnh vực bất động sản",
-        "correct": false
-      },
-      {
-        "text": "Lạm dụng chức vụ để trục lợi cá nhân",
-        "correct": false
-      },
-      {
-        "text": "Thiếu trách nhiệm trong quản lý tài sản Nhà nước",
-        "correct": false
-      },
-      {
-        "text": "Không thực hiện đúng quy định về môi trường",
         "correct": false
       }
     ]
