Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -502,6 +502,33 @@
     ]
   },
   {
+    "title": "WHO 'thắt lưng buộc bụng' sau khi Mỹ rút lui",
+    "content": "Tổ chức Y tế Thế giới (WHO) đang thực hiện cắt giảm chi phí và tối ưu hóa nguồn lực sau khi Mỹ, nhà tài trợ lớn nhất, rút khỏi tổ chức vào tháng 1. WHO đã bắt đầu xác định các hạng mục ưu tiên và giới hạn hợp đồng nhân viên trong một năm để duy trì hoạt động. Mặc dù tổ chức này chưa thông báo về việc cắt giảm nhân sự, nhưng một số quyết định khó khăn có thể là không thể tránh khỏi do thiếu hụt ngân sách.",
+    "link": "https://vnexpress.net/who-that-lung-buoc-bung-sau-khi-my-rut-lui-4860201.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "WHO đã làm gì sau khi Mỹ rút lui?",
+    "answers": [
+      {
+        "text": "Cắt giảm chi phí và tối ưu hóa nguồn lực.",
+        "correct": true
+      },
+      {
+        "text": "Mở rộng quy mô nhân sự.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường tài trợ từ các nước khác.",
+        "correct": false
+      },
+      {
+        "text": "Ngừng tất cả các hoạt động của tổ chức.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ứng xử văn minh để các bên đều có lợi",
     "content": "Bài viết bàn về vụ tranh cãi liên quan đến sản phẩm kẹo rau Kera và tính hiệu quả của luật pháp trong việc bảo vệ người tiêu dùng. Tác giả đề xuất cơ chế kiện tập thể để tạo điều kiện cho các cá nhân, tổ chức bị xâm phạm quyền lợi có thể đứng đơn kiện cùng nhau nhằm bảo vệ lợi ích chung. Điều này không chỉ giúp người tiêu dùng mà còn hỗ trợ các nhà sản xuất có sản phẩm chất lượng, tạo ra một môi trường kinh doanh công bằng hơn.",
     "link": "https://tuoitre.vn/ung-xu-van-minh-de-cac-ben-deu-co-loi-20250312085542288.htm",
