Update generated content

--- a/home.html
+++ b/home.html
@@ -237,6 +237,33 @@
     ]
   },
   {
+    "title": "Jennie hở bạo khi trình diễn: Gợi cảm hay phản cảm?",
+    "content": "Trong đêm diễn đầu tiên của \"The Ruby Experience\" tại Los Angeles, Jennie (BlackPink) đã gây chú ý với trang phục bodysuit trắng của Vettese. Mặc dù thần thái và khả năng trình diễn của cô được khen ngợi, nhưng trang phục quá hớ hênh đã khiến nhiều người chỉ trích, cho rằng nó vượt quá ranh giới gợi cảm và trở nên phản cảm. Jennie đã từng mặc những bộ đồ táo bạo mà không gây tranh cãi, nhưng lần này, chất liệu và kiểu dáng trang phục cần được cân nhắc kỹ lưỡng hơn.",
+    "link": "https://dantri.com.vn/giai-tri/jennie-ho-bao-khi-trinh-dien-goi-cam-hay-phan-cam-20250311141141289.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao Jennie bị chỉ trích khi trình diễn tại Los Angeles?",
+    "answers": [
+      {
+        "text": "Vì trang phục hớ hênh vượt quá giới hạn gợi cảm.",
+        "correct": true
+      },
+      {
+        "text": "Vì cô không thể làm chủ sân khấu.",
+        "correct": false
+      },
+      {
+        "text": "Vì cô không có thần thái cuốn hút.",
+        "correct": false
+      },
+      {
+        "text": "Vì trang phục quá đơn giản.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "WHO 'thắt lưng buộc bụng' sau khi Mỹ rút lui",
     "content": "Tổ chức Y tế Thế giới (WHO) đang thực hiện cắt giảm chi phí và tối ưu hóa nguồn lực sau khi Mỹ, nhà tài trợ lớn nhất, rút khỏi tổ chức vào tháng 1. WHO đã bắt đầu xác định các hạng mục ưu tiên và giới hạn hợp đồng nhân viên trong một năm để duy trì hoạt động. Mặc dù tổ chức này chưa thông báo về việc cắt giảm nhân sự, nhưng một số quyết định khó khăn có thể là không thể tránh khỏi do thiếu hụt ngân sách.",
     "link": "https://vnexpress.net/who-that-lung-buoc-bung-sau-khi-my-rut-lui-4860201.html",
@@ -3286,33 +3313,6 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn dâu tây thường xuyên",
-    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
-    "answers": [
-      {
-        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
-        "correct": true
-      },
-      {
-        "text": "Tăng huyết áp nhanh chóng.",
-        "correct": false
-      },
-      {
-        "text": "Gây ra tình trạng thừa cân.",
-        "correct": false
-      },
-      {
-        "text": "Làm yếu hệ miễn dịch.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
     "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
     "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
@@ -3335,6 +3335,33 @@
       },
       {
         "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lợi ích khi ăn dâu tây thường xuyên",
+    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
+    "answers": [
+      {
+        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
+        "correct": true
+      },
+      {
+        "text": "Tăng huyết áp nhanh chóng.",
+        "correct": false
+      },
+      {
+        "text": "Gây ra tình trạng thừa cân.",
+        "correct": false
+      },
+      {
+        "text": "Làm yếu hệ miễn dịch.",
         "correct": false
       }
     ]
@@ -4634,33 +4661,6 @@
       },
       {
         "text": "200 tấn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "4 lựa chọn thay thế gel năng lượng khi chạy dài",
-    "content": "Bài viết nêu lên bốn lựa chọn thay thế gel năng lượng cho các runner gặp vấn đề tiêu hóa khi chạy dài. Các lựa chọn này bao gồm đồ uống thể thao, kẹo, kẹo nhai thể thao và thực phẩm toàn phần. Mỗi lựa chọn có ưu điểm riêng và cần được thử nghiệm để đảm bảo phù hợp với cơ thể của từng người. Điều này giúp các runner duy trì năng lượng mà không gặp phải khó khăn về tiêu hóa.",
-    "link": "https://vnexpress.net/4-lua-chon-thay-the-gel-nang-luong-khi-chay-dai-4859189.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có những lựa chọn nào thay thế gel năng lượng khi chạy dài?",
-    "answers": [
-      {
-        "text": "Đồ uống thể thao, kẹo, kẹo nhai thể thao và thực phẩm toàn phần",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có đồ uống thể thao",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có kẹo",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có thực phẩm toàn phần",
         "correct": false
       }
     ]
